--- a/resources/data/config.json
+++ b/resources/data/config.json
@@ -1,3 +1,3 @@
 {
-  "catalog_url": "https://raw.githubusercontent.com/tuusuario/tu-repo/main/catalog.json"
+  "catalog_url": "https://github.com/porrii/plugin.video.mimedia/blob/main/resources/data/catalog.json"
 }
